CYN/Custom Install/objects/QAS_CA_Config__c.object
<CustomObject>
    <fields>
        <fullName>ConfigurationId__c</fullName>
        <description>This is the external id of the CorrectAddress configuration mapping.</description>
        <externalId>true</externalId>
        <label>Configuration Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConfigurationType__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Configuration Type</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InteractiveValidationAction__c</fullName>
        <label>Interactive acceptance type</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InteractiveValidationSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interactive validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Settings__c</fullName>
        <label>Settings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TriggerValidationSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <label>sObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>QAS CorrectAddress mapping</label>
    <nameField>
        <label>CorrectAddress Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAS CorrectAddress mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>